# demonsend

./: .gitignore  .gitmodules  Cargo.toml  README.md
daemon/: Cargo.toml
daemon/src/: cli.rs  config.rs  daemon.rs  download.rs  main.rs  protocol.rs  upload.rs
example/: announce.json  discoverysocket.py  example.json  listener.py  night.json  sender.py  sent.json  snowcat.txt  test.sh
localsend/: Cargo.toml
localsend-rs/: Cargo.toml
localsend-rs/src/: client.rs  discovery.rs  lib.rs
localsend/src/: error.rs  lib.rs
localsend/src/discovery/: http.rs  mod.rs  multicast.rs
localsend/src/models/: device.rs
localsend/src/server/: http.rs
localsend/src/transfer/: session.rs  upload.rs
protocol/: Cargo.toml
protocol/src/: api.rs  client.rs  discovery.rs  file.rs  instance.rs  lib.rs
src/: cli.rs  config.rs  daemon.rs  main.rs  protocol.rs  protocol_v1.rs
testapi/: Cargo.toml
testapi/src/: main.rs
testmulticast/: Cargo.toml
testmulticast/src/: main.rs
