[package]
name = "demonsend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.22", features = ["derive"] }
config = "0.14.1"
daemonize = "0.5.0"
directories = "5.0.1"
hyper = { version = "1.5", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
libc = "0.2.167"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
