[package]
name = "demonsend"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "A CLI for localsend as a daemon"
homepage = "https://github.com/wylited/demonsend"
repository = "https://github.com/wylited/demonsend"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
clap = { version = "4.5.22", features = ["derive"] }
daemonize = "0.5.0"
directories = "5.0.1"
env_logger = "0.11.5"
hyper = { version = "1.5", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
inquire = "0.7.5"
libc = "0.2.167"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
localsend = "0.2.2"
