[package]
name = "localsend-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the LocalSend protocol"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
rand = "0.8"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
reqwest = { version = "0.12.9", features = ["json"] }
sha256 = "1.5.0"
warp = "0.3.7"
bytes = "1.9.0"
