[package]
name = "localsend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["json"] }
chrono = "0.4.39"
mime = "0.3.17"
mime_guess = "2.0.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sha256 = "1.5.0"
thiserror = "2.0.6"
tokio = "1.42.0"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
