[package]
name = "protocol"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the LocalSend protocol"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
thiserror = "1.0"
sha2 = "0.10"
rand = "0.8"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
reqwest = { version = "0.12.9", features = ["json"] }
